[package]
name = "image-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]
parallel = ["rayon", "wasm-bindgen-rayon"]

[dependencies]
wasm-bindgen = "0.2.81"
js-sys = "0.3.58"
wee_alloc = { version = "0.4.5", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
rayon = { version = "1.5.3", optional = true }
wasm-bindgen-rayon = { version = "1.0.3", optional = true }

[dependencies.web-sys]
version = "0.3.58"
features = [
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "ImageData"
]

[profile.release]
lto = true
